--- a/scss_2/_header.scss
+++ b/scss_2/_header.scss
@@ -320,6 +320,7 @@ header {
 
                 &:hover,&:active,&.active {
                     background: #ffc651;
+                    color: #ffffff;
                 }
             }
 
