--- a/scss_2/_table.scss
+++ b/scss_2/_table.scss
@@ -2163,35 +2163,31 @@
 	height: auto;
 	margin: 2% auto 0px;
 	border-radius: 3px;
-	border: solid 1px #777777;
+	border: solid 1px #e3e3e3;
 	
 	tr {
 		text-align: center;
 
 		&:nth-of-type(1) {
-			background: #353535;
+			background: #f8f8f8;
 		}
 
 		&:nth-of-type(2) {
-			background: #282828;
+			background: #f2f2f2;
 		}
 
 		td {
 			vertical-align: middle;
-			border: solid 1px #828282;
+			border: solid 1px #e3e3e3;
 			height: 45px;
 			width: 7%;
 			font-size: 13px;
 			line-height: 15px;
-			color: #c3c3c3;
+			color: #454545;
 
 			&.title {
 				width: 9%;
-				background: #282828;
-			}
-
-			&:nth-of-type(2) {
-				color: #f6f6f6;
+				background: #ffffff;
 			}
 		}
 	}
@@ -2202,22 +2198,22 @@
 	width: 100%;
 	height: auto;
 	border-collapse: collapse;
-	background: #303030;
+	background: #ededed;
 
 	tr {
 
 		th {
 			padding: 7px 15px;
-			color: #e1e1e1;
+			color: #356bf7;
 			font-size: 13px;
-			border-bottom: solid 1px #686868;
+			border-bottom: solid 1px #d8d8d8;
 			text-align: left;
 		}
 
 		td {
 			width: 50%;
 			vertical-align: middle;
-			color: #b0b0b0;
+			color: #595959;
 			padding: 15px;
 			font-size: 13px;
 
@@ -2230,8 +2226,12 @@
 				}
 			}
 
+			.leagendName {
+				color: #356bf7;
+			}
+
 			&:last-child {
-				border-left: solid 1px #626262;
+				border-left: solid 1px #d8d8d8;
 				line-height: 18px;
 			}
 		}
@@ -2444,24 +2444,24 @@
     border-collapse: collapse;
 	border-radius: 3px;
 	margin: 0px 0px 10px 10px;
-	background: #2c2c2c;
+	background: #ffffff;
 
 	//內容
     tr {
 		text-align: center;
-		border-bottom: solid 1px #727272;
+		border-bottom: solid 1px #f0f0f0;
 		
 		&.noBorder {
 			border: none;
 		}
 
       	th {
-			color: #44be1d;
+			color: #454545;
 			font-size: 13px;
 			padding: 8px 0px 6px;
 			vertical-align: middle;
-			background: #1b1b1b;
-			border-bottom: solid 1px #33bc19;
+			background: #ffffff;
+			border-bottom: solid 1px #356bf7;
 			position: sticky;
 			top: 70px;
 			z-index: 2;
@@ -2498,13 +2498,13 @@
 				position: relative;
 
 				p {
-					color: #d0d0d0;
+					color: #595959;
 					font-size: 14px;
 					line-height: 24px;
 
 					.odd {
 						font-weight: bold;
-						color: #71e31d;
+						color: #356bf7;
 						padding-left: 5px;
 					}
 				}
@@ -2534,7 +2534,7 @@
 				height: 88px;
 				line-height: 88px;
 				vertical-align: top;
-				color: #d0d0d0;
+				color: #8d8d8d;
 				position: relative;
 
 				span {
@@ -2548,10 +2548,10 @@
 					left: 50%;
 					transform: translateX(-50%);
 					bottom: -24px;
-					border: solid 1px #727272;
+					border: solid 1px #f0f0f0;
 					border-radius: 30px;
-					background: #2c2c2c;
-					color: #d0d0d0;
+					background: #ffffff;
+					color: #595959;
 				}
 			}
 
@@ -2561,7 +2561,7 @@
 				height: auto;
 				display: inline-block;
 				padding: 20px 0px;
-				color: #d0d0d0;
+				color: #595959;
 
 				&.lside {
 					text-align: right;
@@ -2588,7 +2588,7 @@
 
 				&::before {
 					content: "";
-					background: #222222;
+					background: #f5f5f5;
 					width: 90%;
 					height: 70px;
 					border-radius: 80px;
@@ -2596,7 +2596,7 @@
 					top: 50%;
 					left: 50%;
 					transform: translate(-50%,-50%);
-					box-shadow: 0px 2px 3px 0px #51544e,0px 0px 10px 2px #151515 inset;
+					box-shadow: 0px 2px 3px 0px #00000017,0px 0px 10px 2px #00000017 inset;
 				}
 				
 				//左右字
@@ -2616,17 +2616,17 @@
 					}
 
 					p {
-						color: #dcdcdc;
+						color: #595959;
 						font-size: 14px;
 						line-height: 24px;
 
 						&.win {
 							font-weight: bold;
-							color: #71e31d;
+							color: #356bf7;
 						}
 
 						&.lose {
-							color: #959595;
+							color: #454545;
 						}
 					}
 				}
@@ -2635,25 +2635,24 @@
 				.midBox {
 					width: 80px;
 					height: 80px;
-					background: linear-gradient(to top,#2c2c2c 27%,#3e3e3e 94%);
+					background: #ffffff;
 					border-radius: 90px;
 					position: absolute;
 					left: 50%;
 					top: 50%;
 					transform: translate(-50%,-50%);
 					z-index: 2;
-					border: solid 1px #38730e;
-					box-shadow: 0px 0px 10px 2px #374d23;
+					box-shadow: 0px 0px 10px 2px #00000017;
 
 					p {
-						color: #f0f0f0;
+						color: #595959;
 						font-weight: bold;
 						font-size: 18px;
 						line-height: 24px;
 						margin-top: 12px;
 
 						&.score {
-							color: #71e31d;
+							color: #356bf7;
 							margin-top: 6px;
 							font-size: 24px;
 
